--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                  You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity
-            android:name=".MainActivity"
+            android:name=".authentication.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
@@ -35,10 +35,10 @@
         </activity>
 
         <!-- Aktivitas Register -->
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".authentication.RegisterActivity" />
 
         <!-- Aktivitas Login -->
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".authentication.LoginActivity" />
 
         <!-- Aktivitas Home -->
         <activity android:name=".HomeActivity" />
