--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,13 +41,13 @@
         <activity android:name=".authentication.LoginActivity" />
 
         <!-- Aktivitas Home -->
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".dashboard.HomeActivity" />
 
         <!-- Aktivitas Profile Page -->
-        <activity android:name=".ProfilePage" />
+        <activity android:name=".profile.ProfilePage" />
 
         <!-- Aktivitas Maps -->
-        <activity android:name=".MapsActivity" />
+        <activity android:name=".activity.MapsActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
