--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="false"
@@ -48,6 +49,10 @@
 
         <!-- Aktivitas Maps -->
         <activity android:name=".activity.MapsActivity" />
+
+        <activity android:name="com.example.profile.AchievementsActivity" />
+        <activity android:name="com.example.profile.SettingsActivity" />
+        <activity android:name="com.example.profile.AboutUsActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
